--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,7 +1,6 @@
 /* make the customizations */
 $theme-colors: (
-    "info": tomato,
-    "danger": teal
+  "primary": #3f51b5
 );
 
 /* import bootstrap to set changes */
